nav fixed on mobile

--- a/aid/styles/App.scss
+++ b/aid/styles/App.scss
@@ -2,7 +2,8 @@
 
 header {
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 560px;
     overflow: hidden;
 
     background-size: cover;
